--- a/yolov10-main/说明文档.md
+++ b/yolov10-main/说明文档.md
@@ -21,10 +21,12 @@
 
 结果一：
 
-![851bfe46d2f3ccd0166c5447841c87d2](https://github.com/user-attachments/assets/90b351e2-d969-41bf-bd83-349130946e69)
+![851bfe46d2f3ccd0166c5447841c87d2](https://github.com/user-attachments/assets/b33ee7e7-589d-495c-9e77-250e62a50cf7)
+
 
 
 结果二：
 
-![bc334d2f5a13837aba330f1d59e1aad0](https://github.com/user-attachments/assets/f30c39e3-61a2-409b-a266-cf3aa07ba92d)
+![Uploading bc334d2f5a13837aba330f1d59e1aad0.PNG…]()
+
 
